# cominc-hq

./: CLAUDE.md  package.json  pyproject.toml  run.py  test_cat_all3.py  test_cat_all3_output.json  test_cat_draft.py  test_cat_output.json  test_hana_review.py  test_hana_review_output.json
.claude/: launch.json
bkc-yume-web/: .gitignore  README.md  astro.config.mjs  package-lock.json  tailwind.config.mjs  wrangler.toml
bkc-yume-web/public/: robots.txt
bkc-yume-web/scripts/: screenshot.mjs
cominc-website/: index.html
data/: logo_concept.html  logo_concepts_10.html  marketing_strategy_v1.md  org_chart.html  research_mcp_web_management.md  research_sns_mcp.md  strategy_blog.md  team_discussion_20260330.md
data/content/: threads_intro_series.json
data/figma_scripts/: 00_run_all.js  01_stack.js  02_ma_cylinder.js  03_toru.js  04_glass_tower.js
data/knowledge/: business_plan.md  cat_marketing_expertise.md  clare_creative_expertise.md  dev_developer_expertise.md  fin_finance_expertise.md  hana_secretary_expertise.md  kai_guide_expertise.md  law_legal_expertise.md  (+5 more)
project-memory/: AGENTS_CALL_SHEET.md  MEMORY.md  feedback_agent_convention.md  project_indian_curry_restaurant.md  project_john_hotel_kawano.md  project_jp_site_btob.md  project_kominka_furniture.md  project_kominka_location.md  project_myokojoetsu_ec.md  project_myokojoetsu_website.md  project_startup_loan.md  project_subsidy_application.md  reference_org_chart.md
public/: _headers
scripts/: screenshot.mjs  threads_auth.py  threads_test_post.py
src/: __main__.py  main.py  orchestrator.py
(+74 files in other folders)
