[project]
name = "cominc-agents"
version = "0.1.0"
description = "ComInc. AI Agent System — multi-agent operations for inbound tourism"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "anthropic>=0.52.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
cominc = "src.main:main"
